--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -8,6 +8,9 @@ header {
     width: 100%;
     min-height: auto;
     margin-bottom: 0;
+    .navbar-collapse {
+      padding-right: 0;
+    }
     .navbar-header {
       button {
         border: 0px;
@@ -18,17 +21,20 @@ header {
         padding: 0;
         position: relative;
         top: 5px;
+        margin-left: -8px;
         img {
           width: 100%;
         }
       }
     }
     .navbar-form {
-      width: 60%;
       padding: 0;
       margin: 10px 0px;
       .search-input-group {
-        width: 100%;
+        width: 454px;
+        @media (max-width: 914px) {
+          width: 320px;
+        }
         input {
           border-radius: 0;
           border: 0;
@@ -47,7 +53,7 @@ header {
             background: transparent;
             .search_icon {
               img {
-                width: 20px;
+                width: 16px;
               }
             }
           }
@@ -56,14 +62,62 @@ header {
     }
     .navbar-nav {
       li {
+        &.active {
+          a {
+            background: transparent !important;
+            color: $white_color !important;
+            &:before {
+              content: "";
+              position: absolute;
+              z-index: -1;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              background: #ffffff;
+              height: 2px;
+              -webkit-transition-property: left, right;
+              transition-property: left, right;
+              -webkit-transition-duration: 0.3s;
+              transition-duration: 0.3s;
+              -webkit-transition-timing-function: ease-out;
+              transition-timing-function: ease-out;
+              bottom: -6px;
+            }
+          }
+        }
         a {
-          color: $white_color;
+          color: $astronaut_blue;
           text-align: center;
           transition: all ease 0.5s;
           padding-top: 5px;
           padding-bottom: 5px;
+          background: transparent;
+          transform: perspective(1px) translateZ(0);
+          &:before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            left: 51%;
+            right: 51%;
+            bottom: 0;
+            background: #ffffff;
+            height: 2px;
+            -webkit-transition-property: left, right;
+            transition-property: left, right;
+            -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+            -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+            bottom: -6px;
+          }
           &:hover {
-            color: $black_color;
+            &:before {
+              left: 0;
+              right: 0;
+            }
+          }
+          &:hover {
+            color: $white_color;
           }
           img {
             width: 20px;
