--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -46,6 +46,8 @@
 .left_menu {
   background-color: $white_color;
   z-index: 9;
+  width: 20%;
+  float: left;
   .navbar-nav {
     li {
       width: 100%;
@@ -72,7 +74,13 @@
     }
   }
 }
+.middle-section {
+  width: 50%;
+  float: left;
+}
 .right_bar {
+  width: 30%;
+  float: left;
   .normal_title {
     margin-bottom: 3px;
     background-color: $white_color;
@@ -124,23 +132,34 @@
 }
 .feed_wrapper {
   background-color: $white_color;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   @include float();
   .feed_header {
-    padding: 15px 15px;
+    padding: 10px;
     @include float();
     .profile_image {
+      display: inline-block;
+      float: left;
+      margin-right: 16px;
       img {
         width: 45px;
+        height: 45px;
       }
     }
+    .titles_wrapper {
+      display: inline-block;
+      float: left;
+    }
     .like_wrapper {
+      float: right;
       img {
         width: 30px;
       }
     }
   }
   .feed_content {
+    float: left;
+    width: 100%;
     .feed_image {
       img {
         width: 100%;
